--- a/.github/workflows/build-releases.yml
+++ b/.github/workflows/build-releases.yml
@@ -15,8 +15,7 @@ jobs:
       platforms: linux/amd64,linux/arm64
       use_native_arm64_builder: true
       push_to_images: |
-        tootsuite/mastodon
-        ghcr.io/mastodon/mastodon
+        ghcr.io/${{ github.repository_owner }}/mastodon-v
       # Do not use cache when building releases, so apt update is always ran and the release always contain the latest packages
       cache: false
       # Only tag with latest when ran against the latest stable branch
